--- a/src/main/resources/templates/songs.html
+++ b/src/main/resources/templates/songs.html
@@ -11,9 +11,9 @@
 
 <h1>Songs</h1>
 
-<a href="/instruments" class="link-button">Enter Instrument Section</a>
-<a href="/songs/addSong" class="link-button">Add a new song</a>
-
+<a href="/songs/add" class="link-button">Add a new song</a>
+<a href="/" class="link-button">Go Back</a>
+<br>
 <!-- Check if songs list is empty -->
 <div th:if="${#lists.isEmpty(songs)}">
     <p>No songs available. Please add some songs.</p>
@@ -24,11 +24,12 @@
     <li th:each="song : ${songs}">
         <div class="song-item">
             <span th:text="${song.title} + ' - ' + ${song.artist}"></span>
-            <img th:src="${song.albumCover}" alt="Portada de Album" width="100" height="100"/>
-            <spa th:text="${song.album} + ' - ' + ${song.year}"></spa>
-            <spa th:text="${song.duration}"></spa>
-            <a href="songs/updateSong" class="link-button">Update</a>
-            <a href="songs/deleteSong" class="link-button">Delete</a>
+            <img th:src="${song.albumCover}" th:alt="'Portada: ' + ${song.title}" width="100" height="100"/>
+            <span th:text="${song.album} + ' - ' + ${song.year}"></span>
+            <span th:text="${song.duration}"></span>
+            <br>
+            <a th:href="@{songs/{songId}/update(songId=${song.id})}" class="link-button">Update</a>
+            <a th:href="@{songs/{songId}/delete(songId=${song.id})}" class="link-button">Delete</a>
         </div>
     </li>
 </ul>
