--- a/src/main/resources/templates/instruments.html
+++ b/src/main/resources/templates/instruments.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Instruments</title>
-    <link th:href="@{/styles/songs.css}" rel="stylesheet" />
+    <link th:href="@{/styles/instruments.css}" rel="stylesheet" />
 </head>
 <body>
 <h1>Instruments</h1>
-<a href="instruments/addInstrument" class="link-button">Add a new Instruments</a>
+<a href="instruments/add" class="link-button">Add a new Instruments</a>
+<a href="/" class="link-button">Go Back</a>
+<br>
 
 <div th:if="${#lists.isEmpty(instruments)}">
     <p>No Instruments available. Please add some Instruments</p>
@@ -16,15 +18,15 @@
 <ul th:if="${!#lists.isEmpty(instruments)}">
     <li th:each="instrument: ${instruments}">
         <div class="instrument-item">
-            <span th:text="${instrument.name} + ' - ' + ${instrument.type}"></span>
-            <img th:src="${instrument.photo}" th:alt="${instrument.name}">
-            <span th:text="${instrument.brand}"></span>
-            <span th:text="'$' + ${instrument.price}"></span>
-            <a href="instruments/updateInstrument" class="link-button">Update</a>
-            <a href="instruments/deleteInstrument" class="link-button">Delete</a>
+            <span th:text="${instrument.name} + '   -   ' + ${instrument.type}"></span>
+            <img th:src="${instrument.photo}" th:alt="'Photo: ' + ${instrument.name}">
+            <span th:text="'Brand: ' + ${instrument.brand}"></span>
+            <span th:text="'Price: $' + ${instrument.price}"></span>
+            <br>
+            <a th:href="@{instruments/{instrumentId}/update(instrumentId=${instrument.id})}" class="link-button">Update</a>
+            <a th:href="@{/instruments/{instrumentId}/delete(instrumentId=${instrument.id})}" class="link-button">Delete</a>
         </div>
     </li>
-
 </ul>
 
 </body>
